@@ -1024,6 +1024,7 @@ Nicholas Riley
 Jean-Claude Rimbault
 Vlad Riscutia
 Wes Rishel
+Daniel Riti
 Juan M. Bello Rivas
 Davide Rizzo
 Anthony Roach
